XNAT-4911, XNAT-4912: Fixed some issues with display of XNAT dialogs. Fixed issue with footer shifting when dialogs are open. Fixed issue with XNAT and xmodal dialogs where they would 'stick' to the cursor when trying to move them.

--- a/src/main/webapp/scripts/xnat/ui/dialog.css
+++ b/src/main/webapp/scripts/xnat/ui/dialog.css
@@ -21,6 +21,7 @@ body.xnat-dialog-open {
 body.xnat-dialog-open {
     position: fixed;
     padding-right: 15px;
+    margin-top: 1px;
 }
 
 div.xnat-dialog-container,
